# WorldCupHackathon

./: .HANDOFF.md.swp  .gitignore  HANDOFF.md  README.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
anchor/: Anchor.toml  package-lock.json  package.json
anchor/programs/betting-market/: Cargo.toml
anchor/programs/betting-market/src/: lib.rs
anchor/tests/: betting-market.ts
apps/api/: package.json
apps/api/src/: index.ts  server.ts
apps/api/src/__tests__/: mockChain.test.ts  orchestrator.test.ts
apps/api/src/bot/: telegramBot.ts
apps/api/src/chain/: gateway.ts  mockChain.ts  solanaChain.ts
apps/api/src/chain/idl/: betting_market.json  betting_market.ts
apps/api/src/orchestrator/: simulationEngine.ts  types.ts
apps/replay-engine/: package.json
apps/replay-engine/src/: dedupe.ts  index.ts  matchState.ts  merge.ts  parser.ts  paths.ts  replayEngine.ts  verify.ts
apps/replay-engine/src/__tests__/: replay.test.ts
apps/web/: index.html  package.json
apps/web/src/: App.tsx  index.css  store.tsx
apps/web/src/components/: AgentPanel.tsx  Footer.tsx  GoalIntro.tsx  MatchCard.tsx  Navbar.tsx  ReplayControls.tsx
apps/web/src/components/originkit/: ChromaticWaves.tsx
apps/web/src/lib/: agent.ts  liveDesk.ts  painters.ts  replay.ts  utils.ts
apps/web/src/pages/: Confirm.tsx  History.tsx  Home.tsx  MatchCentre.tsx  Matches.tsx  Portfolio.tsx  Replay.tsx  Settings.tsx
docs/: SOLANA.md
