[package]
name = "betting-market"
version = "0.1.0"
description = "World Cup Betting Agent — simulation 1X2 prediction market (Solana/Anchor)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "betting_market"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
init-if-needed = ["anchor-lang/init-if-needed"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
